// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AddTaskBar Default 1`] = `
<div
  className="addbar"
>
  <div
    className="circle"
  />
  <input
    className="addbar-task"
    disabled={false}
    id="addTask"
    name="task"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Create a new todo.."
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Components/AddTaskBar Disabled 1`] = `
<div
  className="addbar"
>
  <div
    className="circle"
  />
  <input
    className="addbar-task"
    disabled={true}
    id="addTask"
    name="task"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Create a new todo.."
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Components/Button Active 1`] = `
<button
  className="btn btn--active btn--normal "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Inactive 1`] = `
<button
  className="btn  btn--normal "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Loading 1`] = `
<button
  className="btn  btn--normal btn--loading"
  disabled={true}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Normal 1`] = `
<button
  className="btn  btn--normal "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  className="btn  btn--small "
  disabled={false}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Components/FilterBar Active Set 1`] = `
<div
  className="filter"
>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    All
  </button>
  <button
    className="btn btn--active btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Active
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Completed
  </button>
</div>
`;

exports[`Storyshots Components/FilterBar All Set 1`] = `
<div
  className="filter"
>
  <button
    className="btn btn--active btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    All
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Active
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Completed
  </button>
</div>
`;

exports[`Storyshots Components/FilterBar Completed Set 1`] = `
<div
  className="filter"
>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    All
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Active
  </button>
  <button
    className="btn btn--active btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Completed
  </button>
</div>
`;

exports[`Storyshots Components/FilterBar No Filter Set 1`] = `
<div
  className="filter"
>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    All
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Active
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Completed
  </button>
</div>
`;

exports[`Storyshots Components/FilterBar None Filter Set 1`] = `
<div
  className="filter"
>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    All
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Active
  </button>
  <button
    className="btn  btn--normal "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Completed
  </button>
</div>
`;

exports[`Storyshots Components/Login Default 1`] = `
<div
  id="login"
>
  <div
    className="login-card"
  >
    <h1
      className="text--title"
    >
      TODO
    </h1>
    <label
      className="login-input"
      htmlFor="login-name"
    >
      Username
      <input
        disabled={false}
        id="login-name"
        onChange={[Function]}
        placeholder="Username"
        type="text"
        value=""
      />
    </label>
    <label
      className="login-input"
      htmlFor="login-password"
    >
      Password
      <input
        disabled={false}
        id="login-password"
        onChange={[Function]}
        placeholder="*******"
        type="password"
        value=""
      />
    </label>
    <button
      className="login-btn "
      disabled={false}
      onClick={[Function]}
    >
      Login
    </button>
    <button
      className="register-btn "
      disabled={false}
      onClick={[Function]}
    >
      Register
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Login Error Msg Provided 1`] = `
<div
  id="login"
>
  <div
    className="login-card"
  >
    <h1
      className="text--title"
    >
      TODO
    </h1>
    <label
      className="login-input"
      htmlFor="login-name"
    >
      Username
      <input
        disabled={false}
        id="login-name"
        onChange={[Function]}
        placeholder="Username"
        type="text"
        value=""
      />
    </label>
    <label
      className="login-input"
      htmlFor="login-password"
    >
      Password
      <input
        disabled={false}
        id="login-password"
        onChange={[Function]}
        placeholder="*******"
        type="password"
        value=""
      />
    </label>
    <button
      className="login-btn "
      disabled={false}
      onClick={[Function]}
    >
      Login
    </button>
    <button
      className="register-btn "
      disabled={false}
      onClick={[Function]}
    >
      Register
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Login Loading 1`] = `
<div
  id="login"
>
  <div
    className="login-card"
  >
    <h1
      className="text--title"
    >
      TODO
    </h1>
    <label
      className="login-input"
      htmlFor="login-name"
    >
      Username
      <input
        disabled={true}
        id="login-name"
        onChange={[Function]}
        placeholder="Username"
        type="text"
        value=""
      />
    </label>
    <label
      className="login-input"
      htmlFor="login-password"
    >
      Password
      <input
        disabled={true}
        id="login-password"
        onChange={[Function]}
        placeholder="*******"
        type="password"
        value=""
      />
    </label>
    <button
      className="login-btn loading"
      disabled={true}
      onClick={[Function]}
    >
      Login
    </button>
    <button
      className="register-btn loading"
      disabled={true}
      onClick={[Function]}
    >
      Register
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Overview Filter Set 1`] = `
<div
  className="overview"
>
  <span>
    5 tasks
  </span>
  <div
    className="overview-filterbar"
  >
    <div
      className="filter"
    >
      <button
        className="btn btn--active btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        All
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Active
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Completed
      </button>
    </div>
  </div>
  <button
    className="btn  btn--small "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Clear Completed
  </button>
</div>
`;

exports[`Storyshots Components/Overview No Filter Set 1`] = `
<div
  className="overview"
>
  <span>
    5 tasks
  </span>
  <div
    className="overview-filterbar"
  >
    <div
      className="filter"
    >
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        All
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Active
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Completed
      </button>
    </div>
  </div>
  <button
    className="btn  btn--small "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Clear Completed
  </button>
</div>
`;

exports[`Storyshots Components/Overview No Task 1`] = `
<div
  className="overview"
>
  <span>
    0 tasks
  </span>
  <div
    className="overview-filterbar"
  >
    <div
      className="filter"
    >
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        All
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Active
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Completed
      </button>
    </div>
  </div>
  <button
    className="btn  btn--small "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Clear Completed
  </button>
</div>
`;

exports[`Storyshots Components/Overview With Tasks Left 1`] = `
<div
  className="overview"
>
  <span>
    5 tasks
  </span>
  <div
    className="overview-filterbar"
  >
    <div
      className="filter"
    >
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        All
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Active
      </button>
      <button
        className="btn  btn--normal "
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Completed
      </button>
    </div>
  </div>
  <button
    className="btn  btn--small "
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Clear Completed
  </button>
</div>
`;

exports[`Storyshots Components/Task Completed 1`] = `
<div
  className="task "
>
  <button
    className="checkbox checkbox-bg "
    onClick={[Function]}
  >
    <img
      alt="Check a task as complete."
      className="check--checked"
      src="icon-check.svg"
      tabIndex="1"
    />
  </button>
  <input
    className="description text--checked"
    id="description-123"
    name="description"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <button
    className="save-btn"
    onClick={[Function]}
  >
    save
  </button>
  <div
    onClick={[Function]}
  >
    <button
      className="delete"
      onClick={[Function]}
    >
      <img
        alt="Delete task."
        className="delete-icon"
        src="icon-cross.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Task Disabled 1`] = `
<div
  className="task "
>
  <button
    className="checkbox  check--unchecked"
    disabled={true}
    onClick={[Function]}
  />
  <input
    className="description "
    disabled={true}
    id="description-123"
    name="description"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <button
    className="save-btn"
    disabled={true}
    onClick={[Function]}
  >
    save
  </button>
  <div
    onClick={[Function]}
  >
    <button
      className="delete"
      disabled={true}
      onClick={[Function]}
    >
      <img
        alt="Delete task."
        className="delete-icon"
        src="icon-cross.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Task Incompleted 1`] = `
<div
  className="task "
>
  <button
    className="checkbox  check--unchecked"
    onClick={[Function]}
  />
  <input
    className="description "
    id="description-123"
    name="description"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <button
    className="save-btn"
    onClick={[Function]}
  >
    save
  </button>
  <div
    onClick={[Function]}
  >
    <button
      className="delete"
      onClick={[Function]}
    >
      <img
        alt="Delete task."
        className="delete-icon"
        src="icon-cross.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Tasklist Loaded 1`] = `
<div
  className="Tasklist"
>
  <div
    className="task "
  >
    <button
      className="checkbox  check--unchecked"
      onClick={[Function]}
    />
    <input
      className="description "
      id="description-1"
      name="description"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
    <button
      className="save-btn"
      onClick={[Function]}
    >
      save
    </button>
    <div
      onClick={[Function]}
    >
      <button
        className="delete"
        onClick={[Function]}
      >
        <img
          alt="Delete task."
          className="delete-icon"
          src="icon-cross.svg"
        />
      </button>
    </div>
  </div>
  <div
    className="task "
  >
    <button
      className="checkbox  check--unchecked"
      onClick={[Function]}
    />
    <input
      className="description "
      id="description-2"
      name="description"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
    <button
      className="save-btn"
      onClick={[Function]}
    >
      save
    </button>
    <div
      onClick={[Function]}
    >
      <button
        className="delete"
        onClick={[Function]}
      >
        <img
          alt="Delete task."
          className="delete-icon"
          src="icon-cross.svg"
        />
      </button>
    </div>
  </div>
  <div
    className="task "
  >
    <button
      className="checkbox  check--unchecked"
      onClick={[Function]}
    />
    <input
      className="description "
      id="description-3"
      name="description"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
    <button
      className="save-btn"
      onClick={[Function]}
    >
      save
    </button>
    <div
      onClick={[Function]}
    >
      <button
        className="delete"
        onClick={[Function]}
      >
        <img
          alt="Delete task."
          className="delete-icon"
          src="icon-cross.svg"
        />
      </button>
    </div>
  </div>
  <div
    className="task "
  >
    <button
      className="checkbox checkbox-bg "
      onClick={[Function]}
    >
      <img
        alt="Check a task as complete."
        className="check--checked"
        src="icon-check.svg"
        tabIndex="1"
      />
    </button>
    <input
      className="description text--checked"
      id="description-4"
      name="description"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
    <button
      className="save-btn"
      onClick={[Function]}
    >
      save
    </button>
    <div
      onClick={[Function]}
    >
      <button
        className="delete"
        onClick={[Function]}
      >
        <img
          alt="Delete task."
          className="delete-icon"
          src="icon-cross.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Tasklist Loading 1`] = `
<div
  className="Tasklist"
>
  <div
    className="loader"
  >
    <div
      className="loader-item"
    />
    <div
      className="loader-item"
    />
    <div
      className="loader-item"
    />
  </div>
</div>
`;
